--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: research-journal-frontend/package-lock.json
 
       - name: Build frontend
         working-directory: research-journal-frontend
